Fixes alignment of remove button
Now that a new div appears, the <h3> has to be adjusted to allow for the remove button to be on the same line

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
 }
 h3 {
     text-align: left;
+    display: inline-block;
     margin: 0 0 10px 0;
     padding-bottom: 5px;
     white-space: nowrap;
